# hulygram

./: .dockerignore  .env.docker  .gitignore  Cargo.toml  Dockerfile  Justfile
.github/workflows/: build.yml
src/: config.rs  context.rs  http.rs  integration.rs  main.rs  reverse.rs  telegram.rs
src/config/: default.toml
src/worker/: auth.rs  chat.rs  context.rs  limiters.rs  mod.rs  services.rs  supervisor.rs  worker.rs
src/worker/sync/: blob.rs  context.rs  export.rs  markdown.rs  media.rs  mod.rs  state.rs  sync.rs  telegram.rs  tx.rs
src/worker/sync/state/: catalog.rs  mod.rs  state.rs
