[package]
name = "hulygram"
version = "0.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
config = "0.15.4"
serde = "1.0.219"
actix-web = { version = "4.10.2", features = ["rustls"] }
actix-cors = "0.7.1"
phonenumber = "0.3.7"
thiserror = "2.0.12"
grammers-client = { git = "https://github.com/aav/grammers", features = [
    "markdown",
] }
grammers-mtsender = { git = "https://github.com/aav/grammers" }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
hulyrs = { git = "https://github.com/hcengineering/hulyrs.git", branch = "limiter-and-retry", features = [
    "actix",
    "kafka",
] }
uuid = { version = "1.16.0", features = ["v4", "v7", "serde", "rng", "std"] }
url = "2.5.4"
ksuid = "0.2.0"
chrono = { version = "0.4.40", features = ["serde"] }
secrecy = "0.10.3"
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["is_variant"] }
multimap = "0.10.0"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "multipart",
    "stream",
    "rustls-tls",
] }
imageinfo = "0.7.27"
ciborium = "0.2.2"
futures = "0.3.31"
console-subscriber = "0.4.1"
tokio-stream = "0.1.17"
bytes = "1.10.1"
serde_with = "3.12.0"
governor = { version = "0.10.0", features = ["std"] }
rand = "0.9.1"
